--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 
@@ -46,39 +48,39 @@
                 <ul class="list-portfolio">
                     <li><img src="./images/img5.jpg" alt="веб-сайт" width="370" height="294">
                         <h2 class="title-portfolio">Технокряк</h2>
-                        <p>Веб-сайт</p>
+                        <p class="portfolio-text">Веб-сайт</p>
                     </li>
                     <li><img src="./images/img6.jpg" alt="дизайн" width="370" height="294">
                         <h2 class="title-portfolio">Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
+                        <p class="portfolio-text">Дизайн</p>
                     </li>
                     <li><img src="./images/img7.jpg" alt="приложение" width="370" height="294">
                         <h2 class="title-portfolio">Ресторан Seafood</h2>
-                        <p>Приложение</p>
+                        <p class="portfolio-text">Приложение</p>
                     </li>
                     <li><img src="./images/img8.jpg" alt="маркетинг" width="370" height="294">
                         <h2 class="title-portfolio">Проект Prime</h2>
-                        <p>Маркетинг</p>
+                        <p class="portfolio-text">Маркетинг</p>
                     </li>
                     <li><img src="./images/img9.jpg" alt="приложение" width="370" height="294">
                         <h2 class="title-portfolio">Проект Boxes</h2>
-                        <p>Приложение</p>
+                        <p class="portfolio-text">Приложение</p>
                     </li>
                     <li><img src="./images/img10.jpg" alt="веб-сайт" width="370" height="294">
                         <h2 class="title-portfolio">Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
+                        <p class="portfolio-text">Веб-сайт</p>
                     </li>
                     <li><img src="./images/img11.jpg" alt="дизайн" width="370" height="294">
                         <h2 class="title-portfolio">Издание Limited Edition</h2>
-                        <p>Дизайн</p>
+                        <p class="portfolio-text">Дизайн</p>
                     </li>
                     <li><img src="./images/img12.jpg" alt="маркетинг" width="370" height="294">
                         <h2 class="title-portfolio">Проект LAB</h2>
-                        <p>Маркетинг</p>
+                        <p class="portfolio-text">Маркетинг</p>
                     </li>
                     <li><img src="./images/img13.jpg" alt="приложение" width="370" height="294">
                         <h2 class="title-portfolio">Growing Business</h2>
-                        <p>Приложение</p>
+                        <p class="portfolio-text">Приложение</p>
                     </li>
                 </ul>
             </section>
