Вносить зміни до навігації

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Шапка-->
     <header>
         <nav>
-            <a href="/" class="logo">
+            <a href="./index.html" class="logo">
                 <span class="img-logo">Web</span>Studio
             </a>
     
