--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!--Шапка-->
     <header>
         <nav>
-            <a href="/" class="logo">
+            <a href="./index.html" class="logo">
                 <span class="img-logo">Web</span>Studio
             </a>
     
