--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div>
         <section class="hero-title">
             <h1>Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button" class="primary-button">Заказать услугу</button>
+            <button type="button" class="button-hero">Заказать услугу</button>
         </section>
         </div>
 
