Вносить зміни у розмітку файлів index.html та portfolio.html

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
     <!--Подвал-->
     <footer>
-        <a href="/" class="logo">
-            <span class="img-logo">Web</span>Studio
+        <a href="/" class="logo-footer">
+            <span class="img-logo-footer">Web</span>Studio
         </a>
         <address class="address">
             <p class="text-address">г. Киев, пр-т Леси Украинки, 26</p>
